--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Terry Migwi
-logo: 
+logo: https://github.com/Terry-Migwi/projects_portfolio/blob/main/Portfolio_pic.png
+description: Data Scientist
 theme: jekyll-theme-minimal
