--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Terry Migwi
-logo: https://github.com/Terry-Migwi/projects_portfolio/blob/main/Portfolio_pic.png
+logo: C:\Users\USER\Downloads\Github\Portfolio_pic.png
 description: Data Scientist
 theme: jekyll-theme-minimal
