--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Terry Migwi
-logo: C:\Users\USER\Downloads\Github\Portfolio_pic.png
+logo: /assets/65303250/1d63f2ef-c8f1-4415-83dc-78fa64b21aaa
 description: Data Scientist
 theme: jekyll-theme-minimal
