--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Terry Migwi
-logo: https://github.com/Terry-Migwi/projects_portfolio/assets/65303250/1d63f2ef-c8f1-4415-83dc-78fa64b21aaa
+logo: https://github.com/Terry-Migwi/projects_portfolio/blob/main/docs/Portfolio_pic.png
 description: Data Scientist
 theme: jekyll-theme-minimal
