--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Terry Migwi
-logo: https://github.com/Terry-Migwi/projects_portfolio/blob/main/docs/pic_2.png
+logo: docs/assets/pic_2.png
 description: Data Scientist
 theme: jekyll-theme-minimal
