--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Terry Migwi
 logo: /docs/assets/pic_2.png
-description: Data Scientist
+description: [LinkedIn](https://www.linkedin.com/in/terry-migwi-a81082137/) 
 theme: jekyll-theme-minimal
