--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Terry Migwi
 logo: /docs/assets/pic_2.png
 description: Data Scientist
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
