--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,18 @@
 title:          Terry Migwi
-logo: /docs/assets/pic_2.png
+logo:           /docs/assets/pic_2.png
 description:     Data Scientist
-show_downloads: false
-theme: jekyll-theme-minimal
+show_downloads:  false
+theme:           jekyll-theme-minimal
+ links:
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "https://"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/"
