--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title:          Terry Migwi
 logo:           /docs/assets/Portfolio_pic.png
 description: >- 
       Data Scientist
+url:        https://github.com/Terry-Migwi
 show_downloads:  false
 theme:           jekyll-theme-minimal
 
