--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ theme:           jekyll-theme-minimal
 
 social:
 
-  linkedin: https://www.linkedin.com/in/terry-migwi-a81082137/
-  github: /https://github.com/Terry-Migwi
+  linkedin:   Terry Migwi
+  github:     Terry-Migwi
 
