--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ theme:           jekyll-theme-minimal
 
 social:
 
-  linkedin:   Terry Migwi
+  linkedin:   terry-migwi
   github:     Terry-Migwi
 
