--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,14 @@ show_downloads:  false
 theme:           jekyll-theme-minimal
 index:           README.md
 
-social:
+#social:
 
-  linkedin:   terry-migwi-a81082137
-  github:     Terry-Migwi
+  #linkedin:   terry-migwi-a81082137
+  #github:     Terry-Migwi 
+
+  # _config.yml
+
+linkedin_url: https://www.linkedin.com/in/terry-migwi-a81082137
+github_url: https://github.com/Terry-Migwi 
+
 
