--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:          Terry Migwi
-logo:           /docs/assets/Portfolio_pic.png
+logo:           /docs/assets/passport_photo.jpg
 description: >-  
        Data Scientist
 show_downloads:  false
